--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background-color: #f4f4f4; padding: 20px; }
         .container { background: white; padding: 30px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); max-width: 400px; margin: auto; }
-        h1 { color: #333; }
+        h1 { color: #333; margin-bottom: 5px; }
+        .brand { color: #007bff; font-weight: bold; font-size: 24px; }
         p { color: #666; }
-        .pay-button { background-color: #28a745; color: white; padding: 15px 25px; border: none; border-radius: 5px; font-size: 18px; cursor: pointer; text-decoration: none; display: inline-block; margin-top: 20px; }
+        .pay-button { background-color: #28a745; color: white; padding: 15px 25px; border: none; border-radius: 5px; font-size: 18px; cursor: pointer; text-decoration: none; display: inline-block; margin-top: 20px; font-weight: bold; }
         .pay-button:hover { background-color: #218838; }
+        .footer { margin-top: 30px; font-size: 12px; color: #999; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>KRYA Official</h1>
-        <p>सुरक्षित मैसेजिंग और आसान पेमेंट के लिए आपका स्वागत है।</p>
+        <div class="brand">KRYA</div>
+        <h1>Official Messenger</h1>
+        <p>मुकेश राय द्वारा संचालित सुरक्षित प्लेटफॉर्म</p>
         <hr>
         <h3>KRYA सर्विस एक्टिवेट करें</h3>
-        <p>मात्र ₹9 में अपनी सेवा शुरू करें</p>
-        <a href="upi://pay?pa=YOUR_UPI_ID@okicici&pn=Mukesh Rai&am=9&cu=INR" class="pay-button">₹9 पे करें</a>
+        <p>अपनी सेवा शुरू करने के लिए नीचे बटन दबाएं</p>
+        <a href="upi://pay?pa=93690mukeshkumar@axl&pn=Mukesh Rai&am=9&cu=INR" class="pay-button">₹9 पे करें</a>
+        <div class="footer">© 2026 KRYA - सभी अधिकार सुरक्षित</div>
     </div>
 </body>
 </html>
-
